test/kubernetes/e2e/features/validation_strict/testdata/invalid-gateway-resources/gateway.yaml
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  name: gateway-without-type
spec:
  bindAddress: '::'
