test/kubernetes/e2e/features/validation_strict/testdata/invalid-gateway-resources/vs-typo.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: default
spec:
  virtualHoost: {}
